Fix display of step thumbnails
  - Use fixed width for images to prevent too big and too small images.
  - Adjust position of caption to be always visible.
  - Switch to stacked layout on smaller devices.

--- a/wiki/src/install/inc/stylesheets/overview.css
+++ b/wiki/src/install/inc/stylesheets/overview.css
@@ -45,7 +45,7 @@ h4 small {
 
 #steps .caption {
   position: absolute;
-  top: 90px;
+  top: 110px;
   width: 100%;
 }
 
@@ -54,14 +54,14 @@ h4 small {
 }
 
 #steps .thumbnail img {
-  width: 130%;
-  outline: 4px solid white;
-  outline-offset: -2px;
+  width: 150px;
+  outline: 6px solid white;
+  outline-offset: -5px;
 }
 
 #steps ol {
   list-style-type: none;
-  margin-left: 70px;
+  margin-left: 0;
 }
 
 #steps h4 {
